...
    <View style={styles.container}>
      <View style={styles.containerHeader}>
        <Text style={styles.screenTitle}>Github Explorer</Text>
      </View>
      <View style={styles.bodyContainer}>
        <Input
          test_id="search_user"
          icon="user"
          placeholder="Type a valid user"
          getInputValue={getInputValue}
          searchError={searchError}
        />
        {searchError && (
          <Text style={styles.errorText}>Type a valid user, please</Text>
        )}
      </View>
      <View style={styles.buttonContainer}>
        <Button
          test_id="search_button"
          onPress={searchUser ? () => handlePress(searchUser) : undefined}
          enabled={searchUser ? true : false}
        >
          <>
            <FeatherIcon name={"search"} style={styles.searchIcon} />
            {"  "}
...
