...
          renderItem={(item: any): any => (
            <ItemToLoad item={item} type={type} loadUserInfo={loadUserInfo} />
          )}
        />
      </View>
      <View style={styles.buttonContainer}>
        <Button test_id="back_button" onPress={handleBack}>
          <>
            <FeatherIcon name={"arrow-left"} style={styles.backIcon} />
            {"  "}
            <Text>Back</Text>
          </>
        </Button>
...
